--- a/yijianding/testcases/yyd.yml
+++ b/yijianding/testcases/yyd.yml
@@ -1,7 +1,7 @@
 - config:
       name: "已预定"
       request:
-        base_url: http://xt05.colorcun.com:10006
+        base_url: 
       variables:
         - sid: "154"
         - x: 1
